feat(mcp_server): 更新swagger文档
