# docs/swagger/swagger.json
@@ -182,6 +182,33 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "删除指定的 MCPServer",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MCPServer管理"
+                ],
+                "summary": "删除 MCPServer",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "MCPServer ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "请求响应 (Code=0 成功)",
+                        "schema": {
+                            "$ref": "#/definitions/mcpserver.DeleteMCPServerResp"
+                        }
+                    }
+                }
             }
         },
         "/api/mcpservers/generate-token": {
@@ -281,6 +308,35 @@
                         "description": "请求响应 (Code=0 成功)",
                         "schema": {
                             "$ref": "#/definitions/mcpserver.GetMCPServerListResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/mcpservers/token/:id": {
+            "delete": {
+                "description": "删除指定的 Token",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MCPServer管理"
+                ],
+                "summary": "删除 Token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "请求响应 (Code=0 成功)",
+                        "schema": {
+                            "$ref": "#/definitions/mcpserver.DeleteTokenResp"
                         }
                     }
                 }
@@ -475,6 +531,32 @@
                 }
             }
         },
+        "mcpserver.DeleteMCPServerResp": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "状态码",
+                    "type": "integer"
+                },
+                "message": {
+                    "description": "消息",
+                    "type": "string"
+                }
+            }
+        },
+        "mcpserver.DeleteTokenResp": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "状态码",
+                    "type": "integer"
+                },
+                "message": {
+                    "description": "消息",
+                    "type": "string"
+                }
+            }
+        },
         "mcpserver.GenerateTokenReq": {
             "type": "object",
             "properties": {
@@ -541,6 +623,10 @@
         "mcpserver.GetMCPServerListRespData": {
             "type": "object",
             "properties": {
+                "createdAt": {
+                    "description": "创建时间",
+                    "type": "string"
+                },
                 "description": {
                     "description": "描述",
                     "type": "string"
@@ -560,6 +646,10 @@
                 "openProxy": {
                     "description": "是否开启代理",
                     "type": "boolean"
+                },
+                "updatedAt": {
+                    "description": "更新时间",
+                    "type": "string"
                 },
                 "url": {
                     "description": "URL",
@@ -591,6 +681,10 @@
         "mcpserver.GetMCPServerRespData": {
             "type": "object",
             "properties": {
+                "createdAt": {
+                    "description": "创建时间",
+                    "type": "string"
+                },
                 "description": {
                     "description": "描述",
                     "type": "string"
@@ -618,6 +712,10 @@
                         "$ref": "#/definitions/mcpserver.TokenData"
                     }
                 },
+                "updatedAt": {
+                    "description": "更新时间",
+                    "type": "string"
+                },
                 "url": {
                     "description": "URL",
                     "type": "string"
@@ -630,6 +728,10 @@
                 "description": {
                     "description": "描述",
                     "type": "string"
+                },
+                "id": {
+                    "description": "ID",
+                    "type": "integer"
                 },
                 "token": {
                     "description": "Token",
